creusot/tests/should_succeed/bug/766.coma

module CreusotContracts_Logic_Fmap_FMap_Type
  type t_fmap 'k 'v
end
module C766_Trait_Goo
  type self
  type t
  type u
  predicate invariant1 (self : self)
  let rec invariant1 (self:self) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant1 self} (! return' {result}) ]
    
  predicate inv1 (_x : self)
  let rec inv1 (_x:self) (return'  (ret:bool))= any [ return' (result:bool)-> {result = inv1 _x} (! return' {result}) ] 
  axiom inv1 : forall x : self . inv1 x = true
  use prelude.Borrow
  predicate invariant0 (self : borrowed self)
  let rec invariant0 (self:borrowed self) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant0 self} (! return' {result}) ]
    
  predicate inv0 (_x : borrowed self)
  let rec inv0 (_x:borrowed self) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = inv0 _x} (! return' {result}) ]
    
  axiom inv0 : forall x : borrowed self . inv0 x = true
  use prelude.Intrinsic
  type deep_model_ty1
  type deep_model_ty0
  use CreusotContracts_Logic_Fmap_FMap_Type as CreusotContracts_Logic_Fmap_FMap_Type
  function deep_model1 (self : self) : CreusotContracts_Logic_Fmap_FMap_Type.t_fmap deep_model_ty0 deep_model_ty1
  let rec deep_model1 (self:self) (return'  (ret:CreusotContracts_Logic_Fmap_FMap_Type.t_fmap deep_model_ty0 deep_model_ty1))= any
    
    [ return' (result:CreusotContracts_Logic_Fmap_FMap_Type.t_fmap deep_model_ty0 deep_model_ty1)-> {result = deep_model1 self}
      (! return' {result}) ]
    
  function deep_model0 (self : borrowed self) : CreusotContracts_Logic_Fmap_FMap_Type.t_fmap deep_model_ty0 deep_model_ty1
    
   =
    [#"../../../../../creusot-contracts/src/model.rs" 92 8 92 28] deep_model1 ( * self)
  let rec deep_model0 (self:borrowed self) (return'  (ret:CreusotContracts_Logic_Fmap_FMap_Type.t_fmap deep_model_ty0 deep_model_ty1))= any
    
    [ return' (result:CreusotContracts_Logic_Fmap_FMap_Type.t_fmap deep_model_ty0 deep_model_ty1)-> {result = deep_model0 self}
      (! return' {result}) ]
    
  let rec f0 (self:borrowed self) (return'  (ret:()))= {[#"../766.rs" 8 14 8 18] inv0 self}
    any [ return' (result:())-> {[#"../766.rs" 7 14 7 52] deep_model0 self = deep_model0 self} (! return' {result}) ] 
  predicate resolve0 (self : borrowed self) =
    [#"../../../../../creusot-contracts/src/resolve.rs" 25 20 25 34]  ^ self =  * self
  let rec resolve0 (self:borrowed self) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = resolve0 self} (! return' {result}) ]
    
  let rec goo (self:borrowed self) (return'  (ret:()))= {[#"../766.rs" 10 16 10 20] inv0 self}
    (! bb0 
    [ bb1 = {[@expl:type invariant] inv0 self}
      -{resolve0 self}- return' {_0} 
    | bb0 = Borrow.borrow_final <self> { * self} {Borrow.get_id self} (fun (_ret':borrowed self) -> [ &_2 <- _ret' ] 
        [ &self <- { self with current = ( ^ _2) ; } ]
        -{inv1 ( ^ _2)}- f0 {_2} (fun (_ret':()) -> [ &_0 <- _ret' ] bb1))  ]
    ) [ return' (result:())-> (! return' {_0}) ] 
    [ & _0 : () = any_l () : () | & self : borrowed self = self | & _2 : borrowed self = any_l () : borrowed self ]
    
end
